--- a/user-manager-web/package.json
+++ b/user-manager-web/package.json
@@ -3,48 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.8.1",
-    "@craco/craco": "^7.1.0",
-    "@hookform/resolvers": "^2.9.6",
-    "@mantine/core": "^7.11.1",
-    "@mantine/hooks": "^7.11.1",
-    "@react-native-async-storage/async-storage": "^1.14.1",
+    "@hookform/resolvers": "^3.0.0",
+    "@mantine/core": "^6.0.4",
+    "@mantine/dropzone": "^6.0.4",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.24",
-    "@types/react": "^17.0.20",
-    "@types/react-dom": "^18.0.9",
-    "antd": "^5.5.0",
-    "axios": "^0.26.1",
-    "axios-auth-refresh": "^3.2.2",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.0.0",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.4.2",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "axios": "^1.4.0",
+    "axios-auth-refresh": "3.3.6",
     "copyfiles": "^2.4.1",
     "date-fns": "^2.30.0",
-    "dayjs": "^1.11.3",
-    "html-react-parser": "^3.0.1",
-    "i18next": "^20.1.0",
+    "dayjs": "^1.11.9",
+    "html-react-parser": "^4.0.0",
+    "i18next": "^23.3.1",
     "jwt-decode": "^3.1.2",
-    "keycloak-js": "^18.0.1",
+    "keycloak-js": "^22.0.5",
     "react": "^18.2.0",
-    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.33.1",
-    "react-i18next": "^11.8.11",
-    "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "redux-logger": "^3.0.6",
+    "react-hook-form": "^7.45.1",
+    "react-i18next": "^13.0.1",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.14.0",
+    "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0",
     "reduxjs-toolkit-persist": "^7.2.1",
-    "runtime-env-cra": "^0.2.4",
-    "tabler-icons-react": "^1.52.0",
-    "ts-transformer-keys": "^0.4.4",
-    "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "typescript": "^4.9.5",
+    "web-vitals": "^3.3.1",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
