--- a/user-manager-web/package.json
+++ b/user-manager-web/package.json
@@ -36,7 +36,9 @@
     "reduxjs-toolkit-persist": "^7.2.1",
     "typescript": "^4.9.5",
     "web-vitals": "^3.3.1",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "antd": "^5.5.0",
+    "tabler-icons-react": "^1.52.0"
   },
   "scripts": {
     "start": "react-scripts start",
