--- a/user-manager-web/package.json
+++ b/user-manager-web/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "antd": "^5.5.0",
     "axios": "^1.4.0",
     "axios-auth-refresh": "3.3.6",
     "copyfiles": "^2.4.1",
@@ -28,17 +29,17 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.1",
     "react-i18next": "^13.0.1",
-    "react-redux": "^8.1.2",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.14.0",
     "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "reduxjs-toolkit-persist": "^7.2.1",
+    "tabler-icons-react": "^1.52.0",
     "typescript": "^4.9.5",
     "web-vitals": "^3.3.1",
     "yup": "^1.2.0",
-    "antd": "^5.5.0",
-    "tabler-icons-react": "^1.52.0"
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
